# psycopg-patterns

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: check.yaml
psycopg_patterns/: __init__.py  configure.py  query.py
src/: __init__.py  configure.py  query.py
tests/: conftest.py  test_patterns.py
