[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["psycopg_patterns"]

[project]
name = "psycopg_patterns"
version = "0.0.0"
description = "Simple psycopg coding patterns..."
readme = "README.md"
authors = [{ name = "Lukas Twist", email = "itsluketwist@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["psycopg", "database", "utils"]
dependencies = [
    "psycopg",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "pytest",
]

[project.urls]
Homepage = "https://github.com/itsluketwist/psycopg-patterns"
